tests/negative/match_tuple_arity.sans
main() I {
  t = (1 2 3)
  match t {
    (a, b) => a + b
  }
  0
}
